@@ -32,6 +32,7 @@ from gettext import gettext as _
 # GTK/Gnome modules
 #
 #-------------------------------------------------------------------------
+import gtk
 from gtk import glade
 
 #-------------------------------------------------------------------------
