@@ -41,6 +41,7 @@ log = logging.getLogger(".")
 #------------------------------------------------------------------------
 import gtk
 from gtk.gdk import Color
+from gtk import glade
 
 #------------------------------------------------------------------------
 #
